--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>net.sourceforge.htmlcleaner</groupId>
     <artifactId>htmlcleaner</artifactId>
     <packaging>bundle</packaging>
-    <version>2.29</version>
+    <version>2.29-SNAPSHOT</version>
     <name>HtmlCleaner</name>
     <description>
         HtmlCleaner is an HTML parser written in Java. It transforms dirty HTML to well-formed XML following
@@ -173,7 +173,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-gpg-plugin</artifactId>
-                <version>1.4</version>
+                <version>3.1.0</version>
                 <executions>
                     <execution>
                         <id>sign-artifacts</id>
@@ -182,9 +182,9 @@
                             <goal>sign</goal>
                         </goals>
                         <!-- only required when scott is doing the release! -->
-                        <configuration> 
-                            <keyname>C9F09252</keyname> 
-                        </configuration> 
+                        <configuration>
+                            <keyname>C9F09252</keyname>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
